--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;body&gt;</p>
 <p class="p1"><span class="Apple-converted-space">                   </span>&lt;h1&gt;<span class="s1">はじめてのバージョン管理</span>&lt;/h1&gt;</p>
 <p class="p1"><span class="Apple-converted-space">                   </span>&lt;p&gt;Git<span class="s1">を使ってバージョン管理する。</span>&lt;/p&gt;</p>
-<p class="p1"><span class="Apple-converted-space">        </span>&lt;/body&gt;</p>
+<p class="p1"><span class="Apple-converted-space">                   </span>&lt;img src=“git-logo.png” alt=“git logo”&gt;</p>
+<p class="p1"><span class="Apple-converted-space">         </span>&lt;/body&gt;</p>
 <p class="p1">&lt;/html&gt;</p>
 </body>
 </html>
